// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Avatar Basic usage 1`] = `
<div
  className="Avatar__StyledDiv-a8mb4w-0 igAJTE"
>
  <span
    className="Text__StyledText-sc-1974afi-0 cEGWcE"
  >
    ASK
  </span>
</div>
`;

exports[`Storyshots Atoms/Card Basic Card 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 gwDvCn"
>
  <div
    className="Cardstories__StyledContent-eexhxe-0 kGEqlI"
  >
    A Card as a div containing content
  </div>
</div>
`;

exports[`Storyshots Atoms/Card Card as article 1`] = `
<article
  className="Card__StyledCard-sc-1e5czjc-0 gwDvCn"
>
  <div
    className="Cardstories__StyledContent-eexhxe-0 kGEqlI"
  >
    A Card as a article containing content
  </div>
</article>
`;

exports[`Storyshots Atoms/Card Card as section 1`] = `
<section
  className="Card__StyledCard-sc-1e5czjc-0 gwDvCn"
>
  <div
    className="Cardstories__StyledContent-eexhxe-0 kGEqlI"
  >
    A Card as a section containing content
  </div>
</section>
`;

exports[`Storyshots Atoms/Currency Primary default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 cmCWWJ"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms/Currency Secondary default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 laXMaY"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms/Currency Tertiary default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 kBKleW"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms/Currency Title1 default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 iUYKst"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms/Currency Title3 default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 joblfr"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms/Development Primary 1`] = `
Array [
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 gcIsAz"
    >
      ▲
      +
      5.4
      %
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 cmCWWJ"
    >
      0
      0
      %
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 hCpHGw"
    >
      ▼
      -2.1
      %
    </span>
  </div>,
]
`;

exports[`Storyshots Atoms/Development Secondary 1`] = `
Array [
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 bmOtmq"
    >
      ▲
      +
      5.4
      %
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 laXMaY"
    >
      0
      0
      %
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 jWluYu"
    >
      ▼
      -2.1
      %
    </span>
  </div>,
]
`;

exports[`Storyshots Atoms/Development Tertiary 1`] = `
Array [
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 ekeaEF"
    >
      ▲
      +
      5.4
      %
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 kBKleW"
    >
      0
      0
      %
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 eumSjM"
    >
      ▼
      -2.1
      %
    </span>
  </div>,
]
`;

exports[`Storyshots Atoms/Grid Grid based on Flexbox: column 1`] = `
<div
  className="FlexboxContainer__StyledFlexbox-omaj0r-0 hHWMaO"
  direction="column"
>
  <div
    className="FlexboxItem__StyledItem-sc-17g0a2v-0 FlexboxItem__StyledItemWithVerticalGutter-sc-17g0a2v-2 mCgkB"
    order={2}
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Col 1
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-sc-17g0a2v-0 FlexboxItem__StyledItemWithVerticalGutter-sc-17g0a2v-2 dlLrFd"
    order={1}
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Col 2
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-sc-17g0a2v-0 FlexboxItem__StyledItemWithVerticalGutter-sc-17g0a2v-2 iWwBfx"
    order={3}
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Grid One dimensional grid 1`] = `
<div
  className="FlexboxContainer__StyledFlexbox-omaj0r-0 iZuTTm"
>
  <div
    className="FlexboxItem__StyledItem-sc-17g0a2v-0 FlexboxItem__StyledItemWithHorisontalGutter-sc-17g0a2v-1 knaIkO"
    size={3}
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Col 1
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-sc-17g0a2v-0 FlexboxItem__StyledItemWithHorisontalGutter-sc-17g0a2v-1 brHSFP"
    size={6}
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Col 2
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-sc-17g0a2v-0 FlexboxItem__StyledItemWithHorisontalGutter-sc-17g0a2v-1 knaIkO"
    size={3}
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Grid One dimensional grid with custom gutter 1`] = `
<div
  className="FlexboxContainer__StyledFlexbox-omaj0r-0 jVRRzI"
>
  <div
    className="FlexboxItem__StyledItem-sc-17g0a2v-0 FlexboxItem__StyledItemWithHorisontalGutter-sc-17g0a2v-1 iQUrlY"
    size={6}
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Col 1
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-sc-17g0a2v-0 FlexboxItem__StyledItemWithHorisontalGutter-sc-17g0a2v-1 iQUrlY"
    size={6}
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Grid Two dimensional grid 1`] = `
<div
  className="CssGridContainer__StyledDiv-k27iz3-0 jCYVSN"
>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 erPZML"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Header
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 hESqJe"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Content
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 djmqzm"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Menu
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 byTuWA"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Ads
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 bYiAzQ"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Footer
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Grid Two dimensional grid with  different layouts for different screen sizes 1`] = `
<div
  className="CssGridContainer__StyledDiv-k27iz3-0 bVPGGC"
>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 bmZEnV"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Left
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 iLpxaN"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Top
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 hESqJe"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Content
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 cszTAO"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Grid Two dimensional grid with custom gutter 1`] = `
<div
  className="CssGridContainer__StyledDiv-k27iz3-0 dHLEBg"
>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 bmZEnV"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Left
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 iLpxaN"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Top
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 hESqJe"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Content
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 cszTAO"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Grid Two dimensional grid with custom templateColumns 1`] = `
<div
  className="CssGridContainer__StyledDiv-k27iz3-0 dJsqmZ"
>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 bmZEnV"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Left
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 iLpxaN"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Top
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 hESqJe"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Content
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 cszTAO"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Grid Two dimensional grid with object as gutter and custom sized columns 1`] = `
<div
  className="CssGridContainer__StyledDiv-k27iz3-0 lgXtpC"
>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 bmZEnV"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Left
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 iLpxaN"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Top
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 hESqJe"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Content
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 bhtUDR"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Messages
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 idvPed"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Order
    </div>
  </div>
  <div
    className="CssGridItem__StyledItem-sc-1hbjro9-0 cszTAO"
  >
    <div
      className="Gridstories__StyledContent-sc-1ylbf4z-0 eWnvtw"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Icon Icons 1`] = `
<ul
  className="Iconstories__StyledList-sc-19nkl57-0 hBkFPW"
>
  <li
    className="Iconstories__StyledListItem-sc-19nkl57-1 iyBkoV"
  >
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 glOwBq"
      focusable="false"
      role="presentation"
      size={5}
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
        transform="rotate(-180 12 12)"
      />
    </svg>
    <p
      className="Iconstories__StyledCaption-sc-19nkl57-2 gsfxdh"
    >
      ChevronUp
    </p>
  </li>
  <li
    className="Iconstories__StyledListItem-sc-19nkl57-1 iyBkoV"
  >
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 glOwBq"
      focusable="false"
      role="presentation"
      size={5}
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
    <p
      className="Iconstories__StyledCaption-sc-19nkl57-2 gsfxdh"
    >
      ChevronDown
    </p>
  </li>
  <li
    className="Iconstories__StyledListItem-sc-19nkl57-1 iyBkoV"
  >
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 glOwBq"
      focusable="false"
      role="presentation"
      size={5}
      viewBox="0 0 24 24"
    >
      <polygon
        points="16.278 14 0 14 0 10 16.278 10 8.211 2 13.916 2 24 12 21.148 14.828 13.916 22 8.211 22"
      />
    </svg>
    <p
      className="Iconstories__StyledCaption-sc-19nkl57-2 gsfxdh"
    >
      ArrowRight
    </p>
  </li>
</ul>
`;

exports[`Storyshots Atoms/Icon Icons with different size and color 1`] = `
<ul
  className="Iconstories__StyledList-sc-19nkl57-0 hBkFPW"
>
  <li
    className="Iconstories__StyledListItem-sc-19nkl57-1 iyBkoV"
  >
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 cFisAB"
      focusable="false"
      role="presentation"
      size={10}
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
        transform="rotate(-180 12 12)"
      />
    </svg>
    <p
      className="Iconstories__StyledCaption-sc-19nkl57-2 gsfxdh"
    >
      ChevronUp
    </p>
  </li>
  <li
    className="Iconstories__StyledListItem-sc-19nkl57-1 iyBkoV"
  >
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 cFisAB"
      focusable="false"
      role="presentation"
      size={10}
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
    <p
      className="Iconstories__StyledCaption-sc-19nkl57-2 gsfxdh"
    >
      ChevronDown
    </p>
  </li>
  <li
    className="Iconstories__StyledListItem-sc-19nkl57-1 iyBkoV"
  >
    <svg
      aria-hidden="true"
      className="IconBase__StyledIconBase-sc-10cbji3-0 cFisAB"
      focusable="false"
      role="presentation"
      size={10}
      viewBox="0 0 24 24"
    >
      <polygon
        points="16.278 14 0 14 0 10 16.278 10 8.211 2 13.916 2 24 12 21.148 14.828 13.916 22 8.211 22"
      />
    </svg>
    <p
      className="Iconstories__StyledCaption-sc-19nkl57-2 gsfxdh"
    >
      ArrowRight
    </p>
  </li>
</ul>
`;

exports[`Storyshots Atoms/Input/Text basic use 1`] = `
<input
  className="Textplaceholder__StyledInput-sc-1w1wjsu-0 kQGjxY"
  color="#282823"
  fontSize={16}
/>
`;

exports[`Storyshots Atoms/List Basic ordered list 1`] = `
<ol
  className="List__StyledList-sc-67l9u3-0 wlTZH"
>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item 1
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item 2
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item 3
  </li>
</ol>
`;

exports[`Storyshots Atoms/List Basic unordered list 1`] = `
<ul
  className="List__StyledList-sc-67l9u3-0 wlTZH"
>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
</ul>
`;

exports[`Storyshots Atoms/ListItem Basic list item 1`] = `
<ul>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
</ul>
`;

exports[`Storyshots Atoms/Media Basic usage 1`] = `
Array [
  <div
    className="Media__StyledDiv-sc-1dic02p-0 eEsbmZ"
  >
    I am only shown on screens smaller than medium size
  </div>,
  <div
    className="Media__StyledDiv-sc-1dic02p-0 idwWqU"
  >
    I am only shown between medium and large sizes
  </div>,
  <div
    className="Media__StyledDiv-sc-1dic02p-0 coUHet"
  >
    I am only shown on screens bigger than large size
  </div>,
]
`;

exports[`Storyshots Atoms/Placeholder Rect 1`] = `
<div
  className="Rect__StyledDiv-sc-17y83bx-0 gWwnpZ"
  height="100vh"
  width="100%"
/>
`;

exports[`Storyshots Atoms/Separator Documentation 1`] = `null`;

exports[`Storyshots Atoms/Separator Separator default 1`] = `
<div
  className="Separatorstories__StyledContainer-sc-12j0h8a-0 ixCTfH"
>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 eEBmzS"
  />
</div>
`;

exports[`Storyshots Atoms/Separator Separator vertical 1`] = `
<div
  className="Separatorstories__StyledContainer-sc-12j0h8a-0 ixCTfH"
>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 ePNKxP"
  />
</div>
`;

exports[`Storyshots Atoms/Text Colors 1`] = `
Array [
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 cmCWWJ"
    >
      Default
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 cmCWWJ"
    >
      Text
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 gcIsAz"
    >
      Positive
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 hCpHGw"
    >
      Negative
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 kLDCRD"
    >
      Warning
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 eEIqHm"
    >
      CTA
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 foWpFZ"
    >
      Label
    </span>
  </div>,
]
`;

exports[`Storyshots Atoms/Text Primary 1`] = `
Array [
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 cmCWWJ"
    >
      Primary text
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 cHZfwv"
    >
      Primary bold
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 bnIaaO"
    >
      Primary text
    </span>
  </div>,
]
`;

exports[`Storyshots Atoms/Text Secondary 1`] = `
Array [
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 laXMaY"
    >
      Secondary text
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 gHlEVt"
    >
      Secondary bold
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 iXItug"
    >
      Secondary text
    </span>
  </div>,
]
`;

exports[`Storyshots Atoms/Text Tertiary 1`] = `
Array [
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 kBKleW"
    >
      Tertiary text
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 lnwQxH"
    >
      Tertiary bold
    </span>
  </div>,
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 bjBurG"
    >
      Tertiary text
    </span>
  </div>,
]
`;

exports[`Storyshots Atoms/Text Title1 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 iUYKst"
>
  Title1 text
</span>
`;

exports[`Storyshots Atoms/Text Title3 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 joblfr"
>
  Title3 text
</span>
`;

exports[`Storyshots Molecules/Button Button primary with size modified 1`] = `
<div
  className="Buttonstories__StyledContainer-sc-1d10526-0 dkZgYK"
>
  <button
    className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 jjxzVi"
    onClick={[Function]}
    size="s"
    type="button"
  >
    Small
  </button>
  <button
    className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
    onClick={[Function]}
    type="button"
  >
    Medium
  </button>
  <button
    className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 byIuXa"
    onClick={[Function]}
    size="l"
    type="button"
  >
    Large
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Button secondary with size modified 1`] = `
<div
  className="Buttonstories__StyledContainer-sc-1d10526-0 dkZgYK"
>
  <button
    className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kZIyEw"
    onClick={[Function]}
    size="s"
    type="button"
  >
    Small
  </button>
  <button
    className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kEUmvh"
    onClick={[Function]}
    type="button"
  >
    Medium
  </button>
  <button
    className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kygVIR"
    onClick={[Function]}
    size="l"
    type="button"
  >
    Large
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Button with type modified 1`] = `
<div
  className="Buttonstories__StyledContainer-sc-1d10526-0 dkZgYK"
>
  <button
    className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
    onClick={[Function]}
    type="reset"
  >
    Reset
  </button>
  <button
    className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Storyshots Molecules/Button Button with variant 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kEUmvh"
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Default usage 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Molecules/Button Disabled button 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 cWJwss"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Molecules/LabeledValue LabeledValue secondary currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Market value
    </span>
  </div>
  <span
    className="Text__StyledText-sc-1974afi-0 gHlEVt"
  >
    SEK 4,672,198.00
  </span>
</div>
`;

exports[`Storyshots Molecules/LabeledValue LabeledValue title1 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Holdings (SEK)
    </span>
  </div>
  <span
    className="Text__StyledText-sc-1974afi-0 iUYKst"
  >
    4713119
  </span>
</div>
`;

exports[`Storyshots Molecules/LabeledValue LabeledValue with negative development and currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Development this year
    </span>
  </div>
  <div
    className="LabeledValuestories__StyledChildsContainer-sc-1raww2x-0 eEzclV"
  >
    <div
      className="LabeledValuestories__StyledDevContainer-sc-1raww2x-1 eLCfNR"
    >
      <span
        className="Text__StyledText-sc-1974afi-0 jWluYu"
      >
        ▼
        -9.2
        %
      </span>
    </div>
    <span
      className="Text__StyledText-sc-1974afi-0 gHlEVt"
    >
      -SEK 4,672,198.00
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules/LabeledValue LabeledValue with positive development and currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Development this year
    </span>
  </div>
  <div
    className="LabeledValuestories__StyledChildsContainer-sc-1raww2x-0 eEzclV"
  >
    <div
      className="LabeledValuestories__StyledDevContainer-sc-1raww2x-1 eLCfNR"
    >
      <span
        className="Text__StyledText-sc-1974afi-0 bmOtmq"
      >
        ▲
        +
        9.2
        %
      </span>
    </div>
    <span
      className="Text__StyledText-sc-1974afi-0 gHlEVt"
    >
      SEK 4,672,198.00
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules/Link Default usage 1`] = `
<a
  className="Link__StyledLink-apj04t-0 dJiWQG"
  href="/startpage"
  onClick={[Function]}
>
  <span
    className="Text__StyledText-sc-1974afi-0 bpEPBt"
  >
    Link
  </span>
</a>
`;

exports[`Storyshots Molecules/Link Link with _blank target 1`] = `
<a
  className="Link__StyledLink-apj04t-0 dJiWQG"
  href="/www.google.com"
  onClick={[Function]}
  target="_blank"
>
  <span
    className="Text__StyledText-sc-1974afi-0 bpEPBt"
  >
    Link
  </span>
</a>
`;

exports[`Storyshots Templates/Test basic use 1`] = `
<div>
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 iUYKst"
    >
       Some header here
    </span>
  </div>
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 cmCWWJ"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla enim dui, rutrum ut ornare a, suscipit ut metus. Praesent ut est ac nisi pulvinar aliquam sit amet quis risus. Etiam at nulla elit. Donec ac eleifend lorem. Nam ut malesuada nunc. Fusce convallis lorem lacinia, venenatis nunc sed, commodo ante. Morbi nulla ipsum, hendrerit id diam eu, dictum malesuada nunc. Vestibulum gravida erat vitae dolor maximus interdum. Duis hendrerit purus ac magna tempus, vel gravida lorem semper. Nunc in lacus erat.
    </span>
  </div>
  <div>
    <span
      className="Text__StyledText-sc-1974afi-0 joblfr"
    >
      Lorem ipsum dolor sit amet,
    </span>
  </div>
</div>
`;

exports[`Storyshots Theme media queries works 1`] = `
<div
  className="Themestories__Component-skwibd-1 bJHDQk"
>
  Change the size of the screen and watch me changing colors
</div>
`;

exports[`Storyshots Theme styled components theme is properly passed 1`] = `
<div
  className="Themestories__Component-skwibd-0 fdGjjA"
>
  Width, height and border comes from theme!
</div>
`;
